--- a/index.html
+++ b/index.html
@@ -8,10 +8,64 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 
-    <title>Hello, world!</title>
+    <title>Guia Hoteles</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="jumbotron">
+        <h1>Hoteles</h1>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sn-4">
+                <p>
+                    <h3>Como funciona?</h3>
+                    <p>busca hoteles de acuerdo a tu preferencia.</p>
+                </p>
+            </div>
+
+            <div class="col-sn-4">
+                <p>
+                    <h3>Donde puedo reservar?</h3>
+                    <p>Elige a la ciudad que te interese y luego realiza la reserva con tus datos</p>
+                </p>
+            </div>
+
+            <div class="col-sn-4">
+                <p>
+                    <h3>Como pago?</h3>
+                    <p>utiliza tu tarjeta favorita</p>
+                </p>
+            </div>
+        </div>
+        <hr>
+
+        <div class="row">
+            <div class="col-sn-3">
+                <h4>Hotel Barcelona</h4>
+                <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
+            <button class="btn">Reservar</button>
+            </div>
+
+            <div class="col-sn-3">
+                <h4>Hotel Buenos aires</h4>
+                <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
+            <button class="btn">Reservar</button>
+            </div>
+
+            <div class="col-sn-3">
+                <h4>Hotel Lima</h4>
+                <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
+            <button class="btn">Reservar</button>
+            </div>
+
+            <div class="col-sn-3">
+                <h4>Hotel Rio de Janeiro</h4>
+                <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
+            <button class="btn">Reservar</button>
+            </div>
+
+        </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
