--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-sn-4">
+            <div class="col-sm-4">
                 <p>
                     <h3>Como funciona?</h3>
                     <p>busca hoteles de acuerdo a tu preferencia.</p>
                 </p>
             </div>
 
-            <div class="col-sn-4">
+            <div class="col-sm-4">
                 <p>
                     <h3>Donde puedo reservar?</h3>
                     <p>Elige a la ciudad que te interese y luego realiza la reserva con tus datos</p>
                 </p>
             </div>
 
-            <div class="col-sn-4">
+            <div class="col-sm-4">
                 <p>
                     <h3>Como pago?</h3>
                     <p>utiliza tu tarjeta favorita</p>
@@ -40,25 +40,25 @@
         <hr>
 
         <div class="row">
-            <div class="col-sn-3">
+            <div class="col-sm-3">
                 <h4>Hotel Barcelona</h4>
                 <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
             <button class="btn">Reservar</button>
             </div>
 
-            <div class="col-sn-3">
+            <div class="col-sm-3">
                 <h4>Hotel Buenos aires</h4>
                 <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
             <button class="btn">Reservar</button>
             </div>
 
-            <div class="col-sn-3">
+            <div class="col-sm-3">
                 <h4>Hotel Lima</h4>
                 <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
             <button class="btn">Reservar</button>
             </div>
 
-            <div class="col-sn-3">
+            <div class="col-sm-3">
                 <h4>Hotel Rio de Janeiro</h4>
                 <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
             <button class="btn">Reservar</button>
