adicionando archivo css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
 
     <title>Guia Hoteles</title>
   </head>
@@ -39,33 +40,105 @@
         </div>
         <hr>
 
-        <div class="row">
-            <div class="col-sm-3">
-                <h4>Hotel Barcelona</h4>
-                <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
-            <button class="btn">Reservar</button>
+        <div class="d-flex flex-wrap">
+            <div class="card-hotel d-flex flex-column justify-content-between">
+                <div>
+                    <h4>Hotel Barcelona</h4>
+                    <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
+                </div>
+                <div>   <button class="btn btn-primary btn-reserva">Reservar</button>    </div>
             </div>
 
-            <div class="col-sm-3">
-                <h4>Hotel Buenos aires</h4>
-                <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
-            <button class="btn">Reservar</button>
+            <div class="card-hotel d-flex flex-column justify-content-between">
+                <div>
+                    <h4>Hotel Buenos aires</h4>
+                    <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
+                </div>
+                <div>   <button class="btn btn-primary btn-reserva">Reservar</button>   </div>
             </div>
 
-            <div class="col-sm-3">
-                <h4>Hotel Lima</h4>
-                <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
-            <button class="btn">Reservar</button>
+            <div class="card-hotel d-flex flex-column justify-content-between">
+                <div>
+                    <h4>Hotel Lima</h4>
+                    <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
+                </div>
+                <div>   <button class="btn btn-primary btn-reserva">Reservar</button>   </div>
             </div>
 
-            <div class="col-sm-3">
-                <h4>Hotel Rio de Janeiro</h4>
-                <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
-            <button class="btn">Reservar</button>
+            <div class="card-hotel d-flex flex-column justify-content-between">
+                <div>
+                    <h4>Hotel Rio de Janeiro</h4>
+                    <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
+                </div>
+                <div><button class="btn btn-primary btn-reserva">Reservar</button>  </div>
             </div>
 
+            <div class="card-hotel d-flex flex-column justify-content-between">
+                <div>   
+                    <h4>Hotel Buenos aires</h4>
+                    <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
+                </div>
+                <div><button class="btn btn-primary btn-reserva">Reservar</button>  </div>
+            </div>
+
+            <div class="card-hotel d-flex flex-column justify-content-between">
+                <div>
+                    <h4>Hotel Lima</h4>
+                    <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
+                </div>
+                <div>   <button class="btn btn-primary btn-reserva">Reservar</button>   </div>
+            </div>
+
+            <div class="card-hotel d-flex flex-column justify-content-between">
+                <div>
+                    <h4>Hotel Lima</h4>
+                    <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
+                </div>
+                <div>   <button class="btn btn-primary btn-reserva">Reservar</button>   </div>
+            </div>
+
+            <div class="card-hotel d-flex flex-column justify-content-between">
+                <div>
+                    <h4>Hotel Lima</h4>
+                    <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
+                </div>
+                <div>   <button class="btn btn-primary btn-reserva">Reservar</button>   </div>
+            </div>
+
+            <div class="card-hotel d-flex flex-column justify-content-between">
+                <div>
+                    <h4>Hotel Lima</h4>
+                    <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
+                </div>
+                <div>   <button class="btn btn-primary btn-reserva">Reservar</button>   </div>
+            </div>
         </div>
     </div>
+
+    <footer>
+        <div class="row ">
+        <div class="col-sm-4 d-flex flex-column">
+            <a href="https://google.com"> google</a>
+            <a href="https://facebook.com"> facebook</a>
+            <a href="https://twitter.com"> twitter</a>
+            <a href="https://instagram.com"> instagram</a>
+        </div>
+
+        <div class="col-sm-4">
+            <address>
+                <h3>Oficina Central</h3>
+                <p> La Paz Bolivia 456789</p>
+                <p>+546812345687</p>
+                <p>aqui@gmail.com</p>
+            </address>
+        </div>
+
+        <div class="col-sm-4 d-flex flex-column align-items-end">
+            <a href="https://google.com"> Nosotros</a>
+            <a href="https://facebook.com"> contactos</a>
+            <a href="https://twitter.com"> Acerca de la pagina</a>
+        </div>
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
