--- a/index.html
+++ b/index.html
@@ -12,10 +12,32 @@
     <title>Guia Hoteles</title>
   </head>
   <body>
+      <nav class="navbar navbar-expanded-md navbar-dark bg-dark fixed-top">
+          <a class="navbar-brand" href="#">Hoteles</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target = "#navbarSupportedContent" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navgation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                  <li class="nav-item active"> <a href="#" class="nav-link">Home</a> </li>
+                  <li class="nav-item "> <a href="./about.html" class="nav-link">Nosotros</a> </li>
+                  <li class="nav-item "> <a href="#" class="nav-link">Precios</a> </li>
+                  <li class="nav-item "> <a href="#" class="nav-link">Terminos y Condiciones</a> </li>
+                  <li class="nav-item "> <a href="#" class="nav-link">Contacto</a> </li>
+                </ul>
+
+          </div>
+      </nav>
     <div class="jumbotron">
         <h1>Hoteles</h1>
     </div>
     <div class="container">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb" aria-current="page">
+                <li class="breadcrumb-item active " aria-current="page">Home</li>
+            </ol>
+            
+        </nav>
         <div class="row">
             <div class="col-sm-4">
                 <p>
