--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
 
         <div class="col-sm-4">
             <address>
-                <h3>Oficina Central</h3>
+                <h3><span class="iconic iconic-home" title="home" aria-hidden="true"></span>Oficina Central</h3>
                 <p> La Paz Bolivia 456789</p>
-                <p>+546812345687</p>
-                <p>aqui@gmail.com</p>
+                <p><span class="iconic iconic-iphone" title="iphone" aria-hidden="true"></span>+546812345687</p>
+                <p><span class="iconic iconic-inbox" title="inbox" aria-hidden="true"></span>aqui@gmail.com</p>
             </address>
         </div>
 
