--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                   <li class="nav-item "> <a href="./about.html" class="nav-link">Nosotros</a> </li>
                   <li class="nav-item "> <a href="#" class="nav-link">Precios</a> </li>
                   <li class="nav-item "> <a href="#" class="nav-link">Terminos y Condiciones</a> </li>
-                  <li class="nav-item "> <a href="#" class="nav-link">Contacto</a> </li>
+                  <li class="nav-item "> <a href="./contactos.html" class="nav-link">Contacto</a> </li>
                 </ul>
 
           </div>
