--- a/contactos.html
+++ b/contactos.html
@@ -21,10 +21,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                   <li class="nav-item "> <a href="./index.html" class="nav-link">Home</a> </li>
-                  <li class="nav-item active"> <a href="./about.html" class="nav-link">Nosotros</a> </li>
-                  <li class="nav-item "> <a href="#" class="nav-link">Precios</a> </li>
+                  <li class="nav-item "> <a href="./about.html" class="nav-link">Nosotros</a> </li>
+                  <li class="nav-item "> <a href="./precios.html" class="nav-link">Precios</a> </li>
                   <li class="nav-item "> <a href="#" class="nav-link">Terminos y Condiciones</a> </li>
-                  <li class="nav-item "> <a href="#" class="nav-link">Contacto</a> </li>
+                  <li class="nav-item active"> <a href="#" class="nav-link">Contacto</a> </li>
                 </ul>
           </div>
       </nav>
@@ -35,7 +35,7 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item " ><a href="./index.html">Home</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Nosotros</li>
+                <li class="breadcrumb-item active" aria-current="page">Contactos</li>
             </ol>
         </nav>
         <h1>Dejame tu comentario</h1>
