--- a/precios.html
+++ b/precios.html
@@ -21,8 +21,8 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                   <li class="nav-item "> <a href="./index.html" class="nav-link">Home</a> </li>
-                  <li class="nav-item active"> <a href="#" class="nav-link">Nosotros</a> </li>
-                  <li class="nav-item "> <a href="./precios.html" class="nav-link">Precios</a> </li>
+                  <li class="nav-item "> <a href="./about.html" class="nav-link">Nosotros</a> </li>
+                  <li class="nav-item active"> <a href="#" class="nav-link">Precios</a> </li>
                   <li class="nav-item "> <a href="#" class="nav-link">Terminos y Condiciones</a> </li>
                   <li class="nav-item "> <a href="./contactos.html" class="nav-link">Contacto</a> </li>
                 </ul>
@@ -36,14 +36,60 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item " ><a href="./index.html">Home</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Nosotros</li>
-            </ol>
-            
+                <li class="breadcrumb-item active" aria-current="page">Precios</li>
+            </ol>    
         </nav>
-        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Eius laudantium a ipsam sunt non repellat, ducimus voluptatibus 
-            minima modi, nam cupiditate eaque, reprehenderit doloribus 
-            neque voluptas ut maiores iste eligendi.</span>
+
+        <div class="table-responsive">
+            <table class="table table-striped">
+                <thead class="thead-dark">
+                    <th>Calidad</th>
+                    <th>La paz</th>
+                    <th>oruro</th>
+                    <th>potosi</th>
+                    <th>cbba</th>
+                    <th>La paz</th>
+                    <th>oruro</th>
+                    <th>potosi</th>
+                    <th>cbba</th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1 estrella</td>
+                        <td>Bs 100</td>
+                        <td>Bs 110</td>
+                        <td>Bs 100</td>
+                        <td>Bs 110</td>
+                        <td>Bs 100</td>
+                        <td>Bs 110</td>
+                        <td>Bs 100</td>
+                        <td>Bs 110</td>
+                    </tr>
+                    <tr>
+                        <td>2 estrellas</td>
+                        <td>Bs 100</td>
+                        <td>Bs 110</td>
+                        <td>Bs 100</td>
+                        <td>Bs 110</td>
+                        <td>Bs 100</td>
+                        <td>Bs 110</td>
+                        <td>Bs 100</td>
+                        <td>Bs 110</td>
+                    </tr>
+                    <tr>
+                        <td>3 estrellas</td>
+                        <td>Bs 100</td>
+                        <td>Bs 110</td>
+                        <td>Bs 100</td>
+                        <td>Bs 110</td>
+                        <td>Bs 100</td>
+                        <td>Bs 110</td>
+                        <td>Bs 100</td>
+                        <td>Bs 110</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 
     <footer>
