--- a/index.html
+++ b/index.html
@@ -63,73 +63,83 @@
         <hr>
 
         <div class="d-flex flex-wrap">
-            <div class="card-hotel d-flex flex-column justify-content-between">
-                <div>
-                    <h4>Hotel Barcelona</h4>
-                    <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
+            <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                <div class="card-body">
+                    <h5 class="card-title">Hotel Barcelona</h5>
+                    <img class="card-img-top" src="images/hotel.jpg" alt="hotel img">
+                    <h6 class="card-subtitle text-muted">España</h6>
+                    <p class="card-text">Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
                 </div>
                 <div>   <button class="btn btn-primary btn-reserva">Reservar</button>    </div>
             </div>
 
-            <div class="card-hotel d-flex flex-column justify-content-between">
-                <div>
-                    <h4>Hotel Buenos aires</h4>
+            <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                <div class="card-body">
+                    <h5 class="card-title">Hotel Buenos aires</h4>
+                    <h6 class="card-subtitle text-muted">España</h6>
                     <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
                 </div>
                 <div>   <button class="btn btn-primary btn-reserva">Reservar</button>   </div>
             </div>
 
-            <div class="card-hotel d-flex flex-column justify-content-between">
-                <div>
-                    <h4>Hotel Lima</h4>
+            <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                <div class="card-body">
+                    <h5 class="card-title">Hotel Lima</h4>
+                    <h6 class="card-subtitle text-muted">España</h6>
                     <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
                 </div>
                 <div>   <button class="btn btn-primary btn-reserva">Reservar</button>   </div>
             </div>
 
-            <div class="card-hotel d-flex flex-column justify-content-between">
-                <div>
-                    <h4>Hotel Rio de Janeiro</h4>
+            <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                <div class="card-body">
+                    <h5 class="card-title">Hotel Rio de Janeiro</h4>
+                    <h6 class="card-subtitle text-muted">España</h6>
                     <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
                 </div>
                 <div><button class="btn btn-primary btn-reserva">Reservar</button>  </div>
             </div>
 
-            <div class="card-hotel d-flex flex-column justify-content-between">
-                <div>   
-                    <h4>Hotel Buenos aires</h4>
+            <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                <div class="card-body">   
+                    <h5 class="card-title">Hotel Buenos aires</h4>
+                    <h6 class="card-subtitle text-muted">España</h6>
                     <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
                 </div>
                 <div><button class="btn btn-primary btn-reserva">Reservar</button>  </div>
             </div>
 
-            <div class="card-hotel d-flex flex-column justify-content-between">
-                <div>
-                    <h4>Hotel Lima</h4>
+            <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                <div class="card-body">
+                    <h5 class="card-title">Hotel Lima</h4>
+                    <h6 class="card-subtitle text-muted">España</h6>
                     <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
                 </div>
                 <div>   <button class="btn btn-primary btn-reserva">Reservar</button>   </div>
             </div>
 
-            <div class="card-hotel d-flex flex-column justify-content-between">
-                <div>
-                    <h4>Hotel Lima</h4>
+            <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                <div class="card-body">
+                    <h5 class="card-title">Hotel Lima</h4>
+                    <h6 class="card-subtitle text-muted">España</h6>
                     <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
                 </div>
                 <div>   <button class="btn btn-primary btn-reserva">Reservar</button>   </div>
             </div>
 
-            <div class="card-hotel d-flex flex-column justify-content-between">
-                <div>
-                    <h4>Hotel Lima</h4>
+            <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                <div class="card-body">
+                    <h5 class="card-title">Hotel Lima</h4>
+                    <h6 class="card-subtitle text-muted">España</h6>
                     <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
                 </div>
                 <div>   <button class="btn btn-primary btn-reserva">Reservar</button>   </div>
             </div>
 
-            <div class="card-hotel d-flex flex-column justify-content-between">
-                <div>
-                    <h4>Hotel Lima</h4>
+            <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                <div class="card-body">
+                    <h5 class="card-title">Hotel Lima</h4>
+                    <h6 class="card-subtitle text-muted">España</h6>
                     <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
                 </div>
                 <div>   <button class="btn btn-primary btn-reserva">Reservar</button>   </div>
