--- a/index.html
+++ b/index.html
@@ -62,11 +62,13 @@
         </div>
         <hr>
 
+        <img src="images/playa.jpg" class="img-fluid" alt="Responsive image">
+
         <div class="d-flex flex-wrap">
             <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                <img class="card-img-top" src="images/hotel.jpg" alt="Responsive img">
                 <div class="card-body">
                     <h5 class="card-title">Hotel Barcelona</h5>
-                    <img class="card-img-top" src="images/hotel.jpg" alt="hotel img">
                     <h6 class="card-subtitle text-muted">España</h6>
                     <p class="card-text">Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
                 </div>
@@ -74,6 +76,7 @@
             </div>
 
             <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                <img class="card-img-top" src="images/hotel.jpg" alt="Responsive img">
                 <div class="card-body">
                     <h5 class="card-title">Hotel Buenos aires</h4>
                     <h6 class="card-subtitle text-muted">España</h6>
@@ -83,6 +86,7 @@
             </div>
 
             <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                <img class="card-img-top" src="images/hotel.jpg" alt="Responsive img">
                 <div class="card-body">
                     <h5 class="card-title">Hotel Lima</h4>
                     <h6 class="card-subtitle text-muted">España</h6>
@@ -92,6 +96,7 @@
             </div>
 
             <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                <img class="card-img-top" src="images/hotel.jpg" alt="Responsive img">
                 <div class="card-body">
                     <h5 class="card-title">Hotel Rio de Janeiro</h4>
                     <h6 class="card-subtitle text-muted">España</h6>
@@ -101,6 +106,7 @@
             </div>
 
             <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                <img class="card-img-top" src="images/hotel.jpg" alt="Responsive img">
                 <div class="card-body">   
                     <h5 class="card-title">Hotel Buenos aires</h4>
                     <h6 class="card-subtitle text-muted">España</h6>
@@ -110,6 +116,7 @@
             </div>
 
             <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                <img class="card-img-top" src="images/hotel.jpg" alt="Responsive img">
                 <div class="card-body">
                     <h5 class="card-title">Hotel Lima</h4>
                     <h6 class="card-subtitle text-muted">España</h6>
@@ -119,6 +126,7 @@
             </div>
 
             <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                <img class="card-img-top" src="images/hotel.jpg" alt="Responsive img">
                 <div class="card-body">
                     <h5 class="card-title">Hotel Lima</h4>
                     <h6 class="card-subtitle text-muted">España</h6>
@@ -128,6 +136,7 @@
             </div>
 
             <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                <img class="card-img-top" src="images/hotel.jpg" alt="Responsive img">
                 <div class="card-body">
                     <h5 class="card-title">Hotel Lima</h4>
                     <h6 class="card-subtitle text-muted">España</h6>
@@ -137,6 +146,7 @@
             </div>
 
             <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
+                <img class="card-img-top" src="images/hotel.jpg" alt="Responsive img">
                 <div class="card-body">
                     <h5 class="card-title">Hotel Lima</h4>
                     <h6 class="card-subtitle text-muted">España</h6>
