--- a/precios.html
+++ b/precios.html
@@ -40,65 +40,86 @@
             </ol>    
         </nav>
 
-        <div class="table-responsive">
-            <table class="table table-striped">
-                <thead class="thead-dark">
-                    <th>Calidad</th>
-                    <th>La paz</th>
-                    <th>oruro</th>
-                    <th>potosi</th>
-                    <th>cbba</th>
-                    <th>La paz</th>
-                    <th>oruro</th>
-                    <th>potosi</th>
-                    <th>cbba</th>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1 estrella</td>
-                        <td>Bs 100</td>
-                        <td>Bs 110</td>
-                        <td>Bs 100</td>
-                        <td>Bs 110</td>
-                        <td>Bs 100</td>
-                        <td>Bs 110</td>
-                        <td>Bs 100</td>
-                        <td>Bs 110</td>
-                    </tr>
-                    <tr>
-                        <td>2 estrellas</td>
-                        <td>Bs 100</td>
-                        <td>Bs 110</td>
-                        <td>Bs 100</td>
-                        <td>Bs 110</td>
-                        <td>Bs 100</td>
-                        <td>Bs 110</td>
-                        <td>Bs 100</td>
-                        <td>Bs 110</td>
-                    </tr>
-                    <tr>
-                        <td>3 estrellas</td>
-                        <td>Bs 100</td>
-                        <td>Bs 110</td>
-                        <td>Bs 100</td>
-                        <td>Bs 110</td>
-                        <td>Bs 100</td>
-                        <td>Bs 110</td>
-                        <td>Bs 100</td>
-                        <td>Bs 110</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <div class="d-flex justify-content-center">
-            <div class="card" style="width: 18rem;">
-                <div class="card-header"> Tarjetas Aceptadas</div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Tarjeta basica</li>
-                    <li class="list-group-item">Tarjeta VIP</li>
-                    <li class="list-group-item">Tarjeta Black</li>
-                </ul>
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="nav-item">
+                <a class="nav-link active" id="compara-tab" data-toggle="tab" href="#compara" role="tab" aria-controls="compara" aria-selected="true">Compara</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="tarjeta-tab" data-toggle="tab" href="#tarjetas" role="tab" aria-controls="tarjetas" aria-selected="false">Tarjetas</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="comentarios-tab" data-toggle="tab" href="#comentarios" role="tab" aria-controls="comentarios" aria-selected="false">Comentarios</a>
+            </li>
+        </ul>
+
+        <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="compara" role="tabpanel" aria-labelledby="compara-tab">
+                <div class="table-responsive">
+                    <table class="table table-striped">
+                        <thead class="thead-dark">
+                            <th>Calidad</th>
+                            <th>La paz</th>
+                            <th>oruro</th>
+                            <th>potosi</th>
+                            <th>cbba</th>
+                            <th>La paz</th>
+                            <th>oruro</th>
+                            <th>potosi</th>
+                            <th>cbba</th>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1 estrella</td>
+                                <td>Bs 100</td>
+                                <td>Bs 110</td>
+                                <td>Bs 100</td>
+                                <td>Bs 110</td>
+                                <td>Bs 100</td>
+                                <td>Bs 110</td>
+                                <td>Bs 100</td>
+                                <td>Bs 110</td>
+                            </tr>
+                            <tr>
+                                <td>2 estrellas</td>
+                                <td>Bs 100</td>
+                                <td>Bs 110</td>
+                                <td>Bs 100</td>
+                                <td>Bs 110</td>
+                                <td>Bs 100</td>
+                                <td>Bs 110</td>
+                                <td>Bs 100</td>
+                                <td>Bs 110</td>
+                            </tr>
+                            <tr>
+                                <td>3 estrellas</td>
+                                <td>Bs 100</td>
+                                <td>Bs 110</td>
+                                <td>Bs 100</td>
+                                <td>Bs 110</td>
+                                <td>Bs 100</td>
+                                <td>Bs 110</td>
+                                <td>Bs 100</td>
+                                <td>Bs 110</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
             </div>
+
+            <div class="tab-pane fade" id="tarjetas" role="tabpanel" aria-labelledby="tarjetas-tab">
+                <div class="d-flex justify-content-center">
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-header"> Tarjetas Aceptadas</div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Tarjeta basica</li>
+                            <li class="list-group-item">Tarjeta VIP</li>
+                            <li class="list-group-item">Tarjeta Black</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="tab-pane fade" id="comentarios" role="tabpanel" aria-labelledby="comentarios-tab">Comentarios</div>
         </div>
     </div>
 
