--- a/index.html
+++ b/index.html
@@ -161,8 +161,37 @@
                     <h5 class="card-title">Hotel Lima</h4>
                     <h6 class="card-subtitle text-muted">España</h6>
                     <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
+                    <button type="button" class="btn btn-outline-seccess" data-toggle="modal" data-target="#contacto">Contacto</button>
                 </div>
                 <div>   <button class="btn btn-primary btn-reserva">Reservar</button>   </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="contacto" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Contacto con el hotel</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <form >
+                            <div class="form group">
+                                <label for="recipient-name" class="col-form-label">Tu email:</label>
+                                <input type="text" class="form-control" id="recipient-name">
+                            </div>
+                            <div class="form group">
+                                <label for="message-text" class="col-form-label">Mensaje:</label>
+                                <textarea id="message-text" class="form-control"></textarea>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-success">Enviar</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
