--- a/precios.html
+++ b/precios.html
@@ -106,6 +106,49 @@
                 </div>
 
             </div>
+            <div class="tab-pane fade" id="tarjetas" role="tabpanel" aria-labelledby="tarjetas-tab">
+                <div class="accordion" id="accordionTarjetas">
+                    <div class="card">
+                        <div class="card-header" id="headingOne">
+                            <h5 class="mb-0">
+                                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseBasica" aria-expanded="true" aria-controls="collapseBasica">Tarjeta Basica</button>
+                            </h5>
+                        </div>
+
+                        <div id="collapseBasica" class="collapse" aria-labelledby="headingOne" data-parent="#accordionTarjetas">
+                            <div class="card-body"> Puedes reservar en 3 cuotas sin interes</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-header" id="headingTwo">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseVIP" aria-expanded="false" aria-controls="collapseVIP">Tarjeta VIP</button>
+                        </h5>
+                    </div>
+
+                    <div id="collapseVIP" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionTarjetas">
+                        <div class="card-body"> Puedes reservar en 6 cuotas sin interes
+                            Al llegar recibiras una canasta con premios.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-header" id="headingThree">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseBlack" aria-expanded="false" aria-controls="collapseBlack">Tarjeta Black</button>
+                        </h5>
+                    </div>
+
+                    <div id="collapseBlack" class="collapse" aria-labelledby="headingThree" data-parent="#accordionTarjetas">
+                        <div class="card-body"> Puedes reservar en 12 cuotas sin interes
+                            Al llegar recibiras una canasta con premios y gimnasio gratis.
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div class="tab-pane fade" id="tarjetas" role="tabpanel" aria-labelledby="tarjetas-tab">
                 <div class="d-flex justify-content-center">
