--- a/index.html
+++ b/index.html
@@ -72,11 +72,33 @@
         </div>
         <hr>
 
-        <img src="images/playa.jpg" class="img-fluid" alt="Responsive image">
+        <div id="carouselControls" class="carousel slide" data-ride = "carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="images/playa2.jpg" class="d-block w-100" alt="Primer slide" >
+                </div>
+                <div class="carousel-item ">
+                    <img src="images/playa.jpg" class="d-block w-100" alt="Segundo slide" >
+                </div>
+                <div class="carousel-item ">
+                    <img src="images/hotel.jpg" class="d-block w-100" alt="Tercer slide" >
+                </div>
+            </div>
+            <a href="#carouselControls" class="carousel-control-prev" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Siguiente</span>
+            </a>
+            <a href="#carouselControls" class="carousel-control-next" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Siguiente</span>
+            </a>
+        </div>
 
-        <div class="d-flex flex-wrap">
+        <!-- <img src="images/playa.jpg" class="img-fluid" alt="Responsive image"> -->
+
+        <div class="d-flex flex-wrap flex-row-reverse">
             <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
-                <img class="card-img-top" src="images/hotel.jpg" alt="Responsive img">
+                <img class="card-img-top" src="images/hotel.jpg" alt="Responsive image">
                 <div class="card-body">
                     <h5 class="card-title" data-toggle="tooltip" data-placement = "top" title="las primeras reservas cuentan con clases de tango gratis">Hotel Barcelona</h5>
                     <h6 class="card-subtitle text-muted">España</h6>
@@ -139,7 +161,7 @@
                 <img class="card-img-top" src="images/hotel.jpg" alt="Responsive img">
                 <div class="card-body">
                     <h5 class="card-title">Hotel Lima</h4>
-                    <h6 class="card-subtitle text-muted">España</h6>
+                    <h6 class="card-subtitle text-muted">Españaaa</h6>
                     <p>Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa</p>
                 </div>
                 <div>   <button class="btn btn-primary btn-reserva" data-toggle="popover" title="Promociones" data-content="Consulta las promociones">Reservar</button>   </div>
@@ -230,6 +252,9 @@
         $(function(){
             $("[data-togle = 'tooltip']").tooltip();
             $("[data-togle = 'popover']").popover();
+            $('.carousel').carousel({
+                interval:1500
+            })
         });
     </script>
     </body>
