--- a/index.html
+++ b/index.html
@@ -251,30 +251,6 @@
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        $(function(){
-            $("[data-togle = 'tooltip']").tooltip();
-            $("[data-togle = 'popover']").popover();
-            $('.carousel').carousel({
-                interval:1500
-            })
-            $('#contacto').on('show.bs.modal', function(e){
-                console.log('el modal se esta mostrando');
-                $('#contactoBtn').removeClass('btn-outline-success');
-                $('#contactoBtn').removeClass('btn-primary');
-                $('#contactoBtn').prop('disabled', true);
-            });
-            $('#contacto').on('shown.bs.modal', function(e){
-                console.log('el modal se esta mostro');
-            });
-            $('#contacto').on('hide.bs.modal', function(e){
-                console.log('el modal se oculta');
-            });
-            $('#contacto').on('hidden.bs.modal', function(e){
-                console.log('el modal se oculto');
-                $('#contactoBtn').prop('disabled', false);
-            });
-        });
-    </script>
+    <script src="js/index.js"></script>
     </body>
 </html>
